######################## -*- Mode: Makefile-Automake -*- ######################
##
## Cforall Version 1.0.0 Copyright (C) 2015 University of Waterloo
##
## The contents of this file are covered under the licence agreement in the
## file "LICENCE" distributed with Cforall.
##
## Makefile.am --
##
## Author           : Thierry Delisle
## Created On       : Thu Aug 02 15:29:11 2018
## Last Modified By :
## Last Modified On :
## Update Count     :
###############################################################################

AUTOMAKE_OPTIONS = foreign # do not require all the GNU file names
ACLOCAL_AMFLAGS  = -I automake
SUBDIRS = prelude src      # order important